work with layouts first page

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,6 +1,16 @@
 @import "smart-grid.less";
+@import "var.less";
 
+.reset();
 
-body {
-  background-color: antiquewhite;
+.smart {    
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  background-image: url("/pict/bkg1.png");  
+  background-size: cover;
+  background-position: center;  
+  &__wrapper {
+
+  }
 }
