--- a/src/less/style.less
+++ b/src/less/style.less
@@ -3,14 +3,117 @@
 
 .reset();
 
-.smart {    
+.smart {        
   display: flex;
   justify-content: center;
-  height: 100vh;
+  height: 1200px;
   background-image: url("/pict/bkg1.png");  
   background-size: cover;
   background-position: center;  
   &__wrapper {
-
+    border: @border;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  &__menu {
+    border: @border;
+    display: flex;
+    height: 70px;
+    width: 100%;
+    margin-top: 30px;
+  }
+  &__logoblock {
+    border: @border;
+    display: flex;
+    width: 20%;
+    a {
+      border: @border;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 70px;
+      margin-left: 30px;
+      img {
+        width: 35px;
+        height: 35px;
+      }
+    }
+    span {
+      font-weight: bolder;
+      font-size: 2rem;
+      align-self: center;
+      color: white;
+      
+    }
+  }
+  &__menublock {
+    border: @border;
+    width: 60%;
+  }
+  &__list {
+    border: @border;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    li {
+      display: flex;      
+      margin: 0 25px;
+      a {
+        color: white;
+        text-decoration: none;
+        font-size: 1.3rem;
+        &:hover {
+          border-bottom: 2px solid white;
+        }
+      }
+    }
+  }
+  &__regblock {
+    border: @border;
+    display: flex;
+    justify-content: center;    
+    width: 20%;
+    button {
+      align-self: center;
+      height: 65%;      
+      color: white;
+      font-size: 1.1rem;
+      outline: none;
+      cursor: pointer;
+      i {
+        margin-right: 10px;
+      }
+      &:nth-child(1) {
+        width: 100px;
+        background: none;
+        border: 2px solid white;
+        border-radius: 30px;
+        margin-right: 20px;
+      }
+      &:nth-child(2) {
+        width: 150px;
+        border-radius: 30px;
+        background-color: #201375;
+        border: none;
+      }
+    }
+  }
+  &__textdescblock {
+    border: @border;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    
+    height: 40%;
+    span {
+      border: @border;
+      align-self: center;
+      width: 50%;
+      color: white;
+      text-align: center;
+      font-size: 4.5rem;
+    }
   }
 }
