--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,31 @@
 <section class="smart">
-  <div class="smart__wrap">
+  <div class="smart__wrapper">
     
+    <div class="smart__menu">
+      <div class="smart__logoblock">
+        <a href="/"><img src="/pict/logo.png" alt="logo"></a>
+        <span>Bitmin</span>
+      </div>
+      <div class="smart__menublock">
+        <ul class="smart__list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">RoadMap</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
+      </div>
+      <div class="smart__regblock">
+        <button class="smart__btnlogin">Log In</button>
+        <button class="smart__btnregistr"><i class="fa fa-user-circle" aria-hidden="true"></i>Register</button>
+      </div>     
+    </div>
+    
+    <div class="smart__textdescblock">
+      <span>Smart cryptocurrency</span>
+      <span>for gaming & stock trading</span>
+    </div>
+  
   </div>  
 </section>
