--- a/src/index.hbs
+++ b/src/index.hbs
@@ -24,7 +24,18 @@
     
     <div class="smart__textdescblock">
       <span>Smart cryptocurrency</span>
-      <span>for gaming & stock trading</span>
+      <span>for gaming &amp; stock trading</span>
+    </div>
+
+    <div class="smart__watch">
+      <span>WHY CHOOSE BITMIN?</span>
+      {{!-- <img src="/pict/btnplay.png" alt="watch button"> --}}
+      <button></button>
+      <span>WATCH NOW</span>
+    </div>
+
+    <div class="smart__phone">
+      
     </div>
   
   </div>  
