--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,34 +1,35 @@
 @import "smart-grid.less";
 @import "var.less";
+@import "fonts.less";
 
 .reset();
 
 .smart {        
   display: flex;
   justify-content: center;
-  height: 1200px;
+  height: 1100px;
   background-image: url("/pict/bkg1.png");  
   background-size: cover;
   background-position: center;  
   &__wrapper {
-    border: @border;
+    //border: @border;
     display: flex;
     flex-direction: column;
     width: 100%;
   }
   &__menu {
-    border: @border;
+    //border: @border;
     display: flex;
     height: 70px;
     width: 100%;
     margin-top: 30px;
   }
   &__logoblock {
-    border: @border;
+    //border: @border;
     display: flex;
     width: 20%;
     a {
-      border: @border;
+      //border: @border;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -44,15 +45,15 @@
       font-size: 2rem;
       align-self: center;
       color: white;
-      
+      font-family: 'Sulphur Point', sans-serif; 
     }
   }
   &__menublock {
-    border: @border;
+    //border: @border;
     width: 60%;
   }
   &__list {
-    border: @border;
+    //border: @border;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,10 +61,11 @@
     li {
       display: flex;      
       margin: 0 25px;
+      font-family: 'Sulphur Point', sans-serif;
       a {
         color: white;
         text-decoration: none;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         &:hover {
           border-bottom: 2px solid white;
         }
@@ -71,7 +73,7 @@
     }
   }
   &__regblock {
-    border: @border;
+    //border: @border;
     display: flex;
     justify-content: center;    
     width: 20%;
@@ -83,7 +85,7 @@
       outline: none;
       cursor: pointer;
       i {
-        margin-right: 10px;
+        margin-right: 10px;        
       }
       &:nth-child(1) {
         width: 100px;
@@ -100,20 +102,55 @@
       }
     }
   }
+  
   &__textdescblock {
-    border: @border;
+    //border: @border;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    
+    justify-content: flex-end;    
     height: 40%;
     span {
-      border: @border;
+      //border: @border;
       align-self: center;
       width: 50%;
       color: white;
       text-align: center;
-      font-size: 4.5rem;
+      font-size: 4rem;
+      font-family: 'Sulphur Point', sans-serif;
+      font-weight: bolder;
     }
   }
+
+  &__watch {
+    //border: @border;
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+    margin-top: 65px;
+    margin-right: 100px;
+    span {
+      //border: @border;
+      color: white;
+      font-family: 'Sulphur Point', sans-serif;
+    }
+    button {
+      background: none;
+      background-image: url("/pict/btnplay.png");            
+      background-position: center;
+      background-size: cover;
+      border-radius: 50px;
+      border: none;
+      margin: 0 20px;
+      height: 105px;
+      width: 105px;
+      outline: none;
+      cursor: pointer;
+    }
+  }
+
+  &__phone {
+    border: @border;
+    display: flex;    
+  }
+
 }
