--- a/src/less/style.less
+++ b/src/less/style.less
@@ -5,9 +5,10 @@
 .reset();
 
 .smart {        
+  border: @border;
   display: flex;
   justify-content: center;
-  height: 1100px;
+  //height: 1080px;
   background-image: url("/pict/bkg1.png");  
   background-size: cover;
   background-position: center;  
@@ -108,7 +109,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;    
-    height: 40%;
+    height: 450px;
     span {
       //border: @border;
       align-self: center;
@@ -149,8 +150,42 @@
   }
 
   &__phone {
-    border: @border;
+    //border: @border;
     display: flex;    
+    justify-content: center;
+  }
+  &__tel {
+    //border: @border;
+    display: flex;    
+    justify-content: center;
+    margin-bottom: -250px;
+    img {
+      position: relative;
+      bottom: 35px;
+      left: 70px;
+      height: 100%;
+      width: 100%;
+    }
+  }
+  &__bitcoin {
+    //border: @border;
+    position: absolute;
+    left: 51%;    
+    height: 220px;
+    bottom: -25px;
+    img {
+      height: 100%;                  
+    }
+  }
+  &__ethereum {
+    //border: @border;
+    position: absolute;
+    left: 49%;    
+    height: 220px;
+    bottom: -190px;
+    img {
+      height: 100%;                  
+    }
   }
 
 }
