--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,6 +35,15 @@
     </div>
 
     <div class="smart__phone">
+      <div class="smart__tel">
+        <img src="/pict/tel.png" alt="telephone">
+      </div>
+      <div class="smart__bitcoin">
+        <img src="/pict/bitcoin.png" alt="bitcoin">
+      </div>
+      <div class="smart__ethereum">
+        <img src="/pict/ethereum.png" alt="ethereum">
+      </div>
       
     </div>
   
