redid to relative

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -242,24 +242,24 @@ img {
 .smart__tel img {
   position: relative;
   bottom: 35px;
-  left: 70px;
+  left: 43%;
   height: 100%;
   width: 100%;
 }
 .smart__bitcoin {
-  position: absolute;
-  left: 51%;
+  position: relative;
+  left: -120px;
   height: 220px;
-  bottom: -25px;
+  bottom: -10px;
 }
 .smart__bitcoin img {
   height: 100%;
 }
 .smart__ethereum {
-  position: absolute;
-  left: 49%;
+  position: relative;
+  left: -530px;
   height: 220px;
-  bottom: -190px;
+  bottom: -180px;
 }
 .smart__ethereum img {
   height: 100%;
