--- a/src/less/style.less
+++ b/src/less/style.less
@@ -162,27 +162,27 @@
     img {
       position: relative;
       bottom: 35px;
-      left: 70px;
+      left: 43%;
       height: 100%;
       width: 100%;
     }
   }
   &__bitcoin {
     //border: @border;
-    position: absolute;
-    left: 51%;    
+    position: relative;
+    left: -120px;    
     height: 220px;
-    bottom: -25px;
+    bottom: -10px;
     img {
       height: 100%;                  
     }
   }
   &__ethereum {
     //border: @border;
-    position: absolute;
-    left: 49%;    
+    position: relative;
+    left: -530px;    
     height: 220px;
-    bottom: -190px;
+    bottom: -180px;
     img {
       height: 100%;                  
     }
