--- a/src/less/style.less
+++ b/src/less/style.less
@@ -5,7 +5,7 @@
 .reset();
 
 .smart {        
-  border: @border;
+  //border: @border;
   display: flex;
   justify-content: center;
   //height: 1080px;
@@ -19,16 +19,30 @@
     width: 100%;
   }
   &__menu {
-    //border: @border;
+    border: @border;
     display: flex;
+    justify-content: center;
     height: 70px;
     width: 100%;
     margin-top: 30px;
   }
   &__logoblock {
-    //border: @border;
+    border: @border;
     display: flex;
     width: 20%;
+    transition: @transition;
+    .xxl-block({
+      width: 17%;
+      transition: @transition;
+    });
+    .xl-block({
+      width: 20%;
+      transition: @transition;
+    });
+    .lg-block({
+      width: 15%;
+      transition: @transition;
+    });
     a {
       //border: @border;
       display: flex;
@@ -36,6 +50,11 @@
       align-items: center;
       width: 70px;
       margin-left: 30px;
+      transition: @transition;
+      .xxl-block({
+        margin-left: 0px;
+        transition: @transition;
+      });      
       img {
         width: 35px;
         height: 35px;
@@ -47,11 +66,31 @@
       align-self: center;
       color: white;
       font-family: 'Sulphur Point', sans-serif; 
+      transition: @transition;
+      .xl-block({
+        font-size: 1.5rem;
+        transition: @transition;
+      });
+      .lg-block({
+        font-size: 1.3rem;
+      });
     }
   }
   &__menublock {
-    //border: @border;
+    border: @border;
     width: 60%;
+    transition: @transition;
+    .xxl-block({
+      width: 66%;
+      transition: @transition;
+    });
+    .xl-block({
+      width: 55%;
+      transition: @transition;
+    });
+    .lg-block({
+      width: 65%;
+    });
   }
   &__list {
     //border: @border;
@@ -60,13 +99,22 @@
     align-items: center;
     height: 100%;
     li {
+      border: @border;
       display: flex;      
       margin: 0 25px;
       font-family: 'Sulphur Point', sans-serif;
-      a {
+      .xl-block({                              
+        margin: 0 10px;
+      });
+      a {        
         color: white;
         text-decoration: none;
         font-size: 1.2rem;
+        transition: @transition;
+        .xl-block({
+          font-size: 1rem;
+          transition: @transition;
+        });
         &:hover {
           border-bottom: 2px solid white;
         }
@@ -74,10 +122,19 @@
     }
   }
   &__regblock {
-    //border: @border;
+    border: @border;
     display: flex;
     justify-content: center;    
     width: 20%;
+    transition: @transition;
+    .xl-block({
+      width: 25%;
+      transition: @transition;
+    });    
+    .lg-block({
+      width: 20%;
+      transition: @transition;
+    });
     button {
       align-self: center;
       height: 65%;      
@@ -85,6 +142,11 @@
       font-size: 1.1rem;
       outline: none;
       cursor: pointer;
+      transition: @transition;
+      .xl-block({
+        font-size: 0.9rem;
+        transition: @transition;
+      });
       i {
         margin-right: 10px;        
       }
@@ -93,13 +155,27 @@
         background: none;
         border: 2px solid white;
         border-radius: 30px;
-        margin-right: 20px;
+        margin-right: 20px;                
+        .lg-block({
+          width: 80px;
+          margin-right: 10px;
+          font-size: 0.9rem;
+        });
       }
       &:nth-child(2) {
         width: 150px;
         border-radius: 30px;
         background-color: #201375;
         border: none;
+        transition: @transition;
+        .xxl-block({
+          margin-right: 20px;        
+          transition: @transition;
+        });
+        .lg-block({
+          width: 100px;
+          margin-right: 10px;
+        });
       }
     }
   }
