--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,15 +112,29 @@ img {
   width: 100%;
 }
 .smart__menu {
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   height: 70px;
   width: 100%;
   margin-top: 30px;
+  transition: ease-in-out 0.5s;
+}
+@media screen and (max-width: 720px) {
+  .smart__menu {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 450px;
+    transition: ease-in-out 0.5s;
+  }
+}
+@media screen and (max-width: 480px) {
+  .smart__menu {
+    height: 170px;
+    transition: ease-in-out 0.5s;
+  }
 }
 .smart__logoblock {
-  border: 1px solid red;
   display: flex;
   width: 20%;
   transition: ease-in-out 0.5s;
@@ -143,6 +157,13 @@ img {
     transition: ease-in-out 0.5s;
   }
 }
+@media screen and (max-width: 720px) {
+  .smart__logoblock {
+    justify-content: center;
+    height: 50px;
+    width: 250px;
+  }
+}
 .smart__logoblock a {
   display: flex;
   justify-content: center;
@@ -160,6 +181,12 @@ img {
 .smart__logoblock a img {
   width: 35px;
   height: 35px;
+}
+@media screen and (max-width: 720px) {
+  .smart__logoblock a img {
+    width: 50px;
+    height: 50px;
+  }
 }
 .smart__logoblock span {
   font-weight: bolder;
@@ -180,8 +207,12 @@ img {
     font-size: 1.3rem;
   }
 }
+@media screen and (max-width: 720px) {
+  .smart__logoblock span {
+    font-size: 2rem;
+  }
+}
 .smart__menublock {
-  border: 1px solid red;
   width: 60%;
   transition: ease-in-out 0.5s;
 }
@@ -202,14 +233,30 @@ img {
     width: 65%;
   }
 }
+@media screen and (max-width: 720px) {
+  .smart__menublock {
+    width: 100%;
+  }
+}
 .smart__list {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
 }
+@media screen and (max-width: 720px) {
+  .smart__list {
+    flex-direction: column;
+    justify-content: space-around;
+    height: 300px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .smart__list {
+    display: none;
+  }
+}
 .smart__list li {
-  border: 1px solid red;
   display: flex;
   margin: 0 25px;
   font-family: 'Sulphur Point', sans-serif;
@@ -217,6 +264,11 @@ img {
 @media screen and (max-width: 1140px) {
   .smart__list li {
     margin: 0 10px;
+  }
+}
+@media screen and (max-width: 720px) {
+  .smart__list li {
+    justify-content: space-around;
   }
 }
 .smart__list li a {
@@ -231,11 +283,15 @@ img {
     transition: ease-in-out 0.5s;
   }
 }
+@media screen and (max-width: 720px) {
+  .smart__list li a {
+    font-size: 1.5rem;
+  }
+}
 .smart__list li a:hover {
   border-bottom: 2px solid white;
 }
 .smart__regblock {
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   width: 20%;
@@ -251,6 +307,13 @@ img {
   .smart__regblock {
     width: 20%;
     transition: ease-in-out 0.5s;
+  }
+}
+@media screen and (max-width: 720px) {
+  .smart__regblock {
+    justify-content: space-around;
+    height: 70px;
+    width: 270px;
   }
 }
 .smart__regblock button {
@@ -270,6 +333,20 @@ img {
 }
 .smart__regblock button i {
   margin-right: 10px;
+  transition: ease-in-out 0.5s;
+}
+@media screen and (max-width: 960px) {
+  .smart__regblock button i {
+    margin: 0;
+    transition: ease-in-out 0.5s;
+  }
+}
+@media screen and (max-width: 720px) {
+  .smart__regblock button i {
+    margin-right: 10px;
+    font-size: 1rem;
+    transition: ease-in-out 0.5s;
+  }
 }
 .smart__regblock button:nth-child(1) {
   width: 100px;
@@ -283,6 +360,12 @@ img {
     width: 80px;
     margin-right: 10px;
     font-size: 0.9rem;
+  }
+}
+@media screen and (max-width: 720px) {
+  .smart__regblock button:nth-child(1) {
+    width: 100px;
+    font-size: 1rem;
   }
 }
 .smart__regblock button:nth-child(2) {
@@ -304,13 +387,35 @@ img {
     margin-right: 10px;
   }
 }
+@media screen and (max-width: 720px) {
+  .smart__regblock button:nth-child(2) {
+    width: 130px;
+    font-size: 1rem;
+  }
+}
 .smart__textdescblock {
+  border: 1px solid red;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   height: 450px;
+  transition: ease-in-out 0.5s;
+}
+@media screen and (max-width: 960px) {
+  .smart__textdescblock {
+    justify-content: center;
+    height: 350px;
+    transition: ease-in-out 0.5s;
+  }
+}
+@media screen and (max-width: 720px) {
+  .smart__textdescblock {
+    height: 250px;
+    transition: ease-in-out 0.5s;
+  }
 }
 .smart__textdescblock span {
+  border: 1px solid red;
   align-self: center;
   width: 50%;
   color: white;
@@ -318,6 +423,36 @@ img {
   font-size: 4rem;
   font-family: 'Sulphur Point', sans-serif;
   font-weight: bolder;
+  transition: ease-in-out 0.5s;
+}
+@media screen and (max-width: 1400px) {
+  .smart__textdescblock span {
+    width: 68%;
+    font-size: 3.7rem;
+    transition: ease-in-out 0.5s;
+  }
+}
+@media screen and (max-width: 1140px) {
+  .smart__textdescblock span {
+    width: 75%;
+    font-size: 3.4rem;
+  }
+}
+@media screen and (max-width: 960px) {
+  .smart__textdescblock span {
+    font-size: 3rem;
+  }
+}
+@media screen and (max-width: 720px) {
+  .smart__textdescblock span {
+    width: 85%;
+    font-size: 2.5rem;
+  }
+}
+@media screen and (max-width: 540px) {
+  .smart__textdescblock span {
+    font-size: 2rem;
+  }
 }
 .smart__watch {
   display: flex;
