--- a/src/less/style.less
+++ b/src/less/style.less
@@ -19,15 +19,27 @@
     width: 100%;
   }
   &__menu {
-    border: @border;
+    //border: @border;
     display: flex;
     justify-content: center;
     height: 70px;
     width: 100%;
     margin-top: 30px;
-  }
+    transition: @transition;
+    .md-block({
+      flex-direction: column;      
+      justify-content: space-between;
+      align-items: center;
+      height: 450px;
+      transition: @transition;
+    });
+    .xs-block({
+      height: 170px;  
+      transition: @transition;
+    });
+  }  
   &__logoblock {
-    border: @border;
+    //border: @border;
     display: flex;
     width: 20%;
     transition: @transition;
@@ -42,6 +54,11 @@
     .lg-block({
       width: 15%;
       transition: @transition;
+    });
+    .md-block({
+      justify-content: center;
+      height: 50px;
+      width: 250px;
     });
     a {
       //border: @border;
@@ -58,6 +75,10 @@
       img {
         width: 35px;
         height: 35px;
+        .md-block({
+          width: 50px;
+          height: 50px;
+        }); 
       }
     }
     span {
@@ -74,10 +95,13 @@
       .lg-block({
         font-size: 1.3rem;
       });
+      .md-block({
+        font-size: 2rem;
+      });
     }
   }
   &__menublock {
-    border: @border;
+    //border: @border;
     width: 60%;
     transition: @transition;
     .xxl-block({
@@ -91,6 +115,9 @@
     .lg-block({
       width: 65%;
     });
+    .md-block({
+      width: 100%;
+    });
   }
   &__list {
     //border: @border;
@@ -98,13 +125,24 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    .md-block({
+      flex-direction: column;
+      justify-content: space-around;
+      height: 300px;
+    });
+    .xs-block({
+      display: none;      
+    });
     li {
-      border: @border;
+      //border: @border;
       display: flex;      
       margin: 0 25px;
       font-family: 'Sulphur Point', sans-serif;
       .xl-block({                              
         margin: 0 10px;
+      });
+      .md-block({
+        justify-content: space-around;        
       });
       a {        
         color: white;
@@ -115,6 +153,9 @@
           font-size: 1rem;
           transition: @transition;
         });
+        .md-block({          
+          font-size: 1.5rem;
+        });
         &:hover {
           border-bottom: 2px solid white;
         }
@@ -122,7 +163,7 @@
     }
   }
   &__regblock {
-    border: @border;
+    //border: @border;
     display: flex;
     justify-content: center;    
     width: 20%;
@@ -134,6 +175,11 @@
     .lg-block({
       width: 20%;
       transition: @transition;
+    });
+    .md-block({
+      justify-content: space-around;
+      height: 70px;
+      width: 270px;
     });
     button {
       align-self: center;
@@ -149,6 +195,16 @@
       });
       i {
         margin-right: 10px;        
+        transition: @transition;
+        .lg-block({
+          margin: 0;
+          transition: @transition;
+        });
+        .md-block({
+          margin-right: 10px;
+          font-size: 1rem;
+          transition: @transition;
+        });
       }
       &:nth-child(1) {
         width: 100px;
@@ -160,6 +216,10 @@
           width: 80px;
           margin-right: 10px;
           font-size: 0.9rem;
+        });
+        .md-block({
+          width: 100px;
+          font-size: 1rem;
         });
       }
       &:nth-child(2) {
@@ -176,18 +236,32 @@
           width: 100px;
           margin-right: 10px;
         });
+        .md-block({          
+          width: 130px;
+          font-size: 1rem;
+        });
       }
     }
   }
   
   &__textdescblock {
-    //border: @border;
+    border: @border;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;    
-    height: 450px;
+    height: 450px;    
+    transition: @transition;
+    .lg-block({
+      justify-content: center;
+      height: 350px;
+      transition: @transition;
+    });
+    .md-block({
+      height: 250px;
+      transition: @transition;
+    });
     span {
-      //border: @border;
+      border: @border;
       align-self: center;
       width: 50%;
       color: white;
@@ -195,6 +269,26 @@
       font-size: 4rem;
       font-family: 'Sulphur Point', sans-serif;
       font-weight: bolder;
+      transition: @transition;
+      .xxl-block({
+        width: 68%;
+        font-size: 3.7rem;
+        transition: @transition;
+      });
+      .xl-block({
+        width: 75%;        
+        font-size: 3.4rem;
+      });
+      .lg-block({
+        font-size: 3rem;
+      });
+      .md-block({        
+        width: 85%;
+        font-size: 2.5rem;
+      });
+      .sm-block({
+        font-size: 2rem;
+      });
     }
   }
 
