--- a/src/index.hbs
+++ b/src/index.hbs
@@ -31,7 +31,7 @@
       <span>WHY CHOOSE BITMIN?</span>
       {{!-- <img src="/pict/btnplay.png" alt="watch button"> --}}
       <button></button>
-      <span>WATCH NOW</span>
+      <span>WATCH NOW !!!</span>
     </div>
 
     <div class="smart__phone">
